[package]
name = "gitkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env"] }
git2 = "0.18.1"
run_script = "0.10.1"
shellexpand = { version = "3.1.0", features = ["tilde"] }
shellfn = "0.1.1"
